<resources>
    <string name="app_name">To-Do List</string>
    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_title">Title for your task</string>
    <string name="edit_task_description">Describe your task here&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="charging_reminder_notification_title">C\'mon, you have some tasks to do.</string>
    <string name="charging_reminder_notification_body">Lets\'go!</string>

</resources>
